src/test/deca/context/invalid/class/heritage/absent_superclass.deca
// Description:
//    Déclaration de classe avec superclass non définir
//
// Resultats:
//    undefined supeclass
// 
// Historique:
//    cree le 01/01/2016

class C extends A {

}

{

}
